Fixes #556 - Improve Resource.getAlias() checks on Windows
Manual backport / copy of commit 97af3d663fd22343129e8364d601640649d9eaea