@@ -47,7 +47,6 @@ import org.eclipse.jetty.util.log.Logger;
  * This class can check for aliasing in the filesystem (eg case
  * insensitivity).  By default this is turned on, or it can be controlled 
  * by calling the static method @see FileResource#setCheckAliases(boolean)
- * 
  */
 public class FileResource extends Resource
 {
@@ -55,12 +54,12 @@ public class FileResource extends Resource
 
     /* ------------------------------------------------------------ */
     private final File _file;
-    private final String _uri;
+    private final URI _uri;
     private final URI _alias;
-    
+
     /* -------------------------------------------------------- */
     public FileResource(URL url)
-        throws IOException, URISyntaxException
+            throws IOException, URISyntaxException
     {
         File file;
         try
@@ -69,7 +68,7 @@ public class FileResource extends Resource
             file =new File(url.toURI());
             assertValidPath(file.toString());
         }
-        catch (URISyntaxException e) 
+        catch (URISyntaxException e)
         {
             throw e;
         }
@@ -77,14 +76,14 @@ public class FileResource extends Resource
         {
             if (!url.toString().startsWith("file:"))
                 throw new IllegalArgumentException("!file:");
-            
+
             LOG.ignore(e);
             try
             {
                 // Assume that File.toURL produced unencoded chars. So try encoding them.
-                String file_url="file:"+URIUtil.encodePath(url.toString().substring(5));           
+                String file_url="file:"+URIUtil.encodePath(url.toString().substring(5));
                 URI uri = new URI(file_url);
-                if (uri.getAuthority()==null) 
+                if (uri.getAuthority()==null)
                     file = new File(uri);
                 else
                     file = new File("//"+uri.getAuthority()+URIUtil.decodePath(url.getFile()));
@@ -98,10 +97,10 @@ public class FileResource extends Resource
                 file = new File(perm==null?url.getFile():perm.getName());
             }
         }
-        
+
         _file=file;
         _uri=normalizeURI(_file,url.toURI());
-        _alias=checkFileAlias(_file);
+        _alias=checkFileAlias(_uri,_file);
     }
 
     /* -------------------------------------------------------- */
@@ -109,45 +108,113 @@ public class FileResource extends Resource
     {
         File file=new File(uri);
         _file=file;
-        URI file_uri=_file.toURI();
-        _uri=normalizeURI(_file,uri);
-        assertValidPath(file.toString());
+        try
+        {
+            URI file_uri = _file.toURI();
+            _uri = normalizeURI(_file, uri);
+            assertValidPath(file.toString());
 
-        // Is it a URI alias?
-        if (!URIUtil.equalsIgnoreEncodings(_uri,file_uri.toString()))
-            _alias=_file.toURI();
-        else
-            _alias=checkFileAlias(_file);
+            // Is it a URI alias?
+            if (!URIUtil.equalsIgnoreEncodings(_uri.toASCIIString(), file_uri.toString()))
+                _alias = _file.toURI();
+            else
+                _alias = checkFileAlias(_uri, _file);
+        }
+        catch (final URISyntaxException e)
+        {
+            throw new InvalidPathException(_file.toString(), e.getMessage())
+            {
+                {
+                    initCause(e);
+                }
+            };
+        }
     }
 
     /* -------------------------------------------------------- */
-    FileResource(File file)
+    public FileResource(File file)
     {
         assertValidPath(file.toString());
         _file=file;
-        _uri=normalizeURI(_file,_file.toURI());
-        _alias=checkFileAlias(_file);
+        try
+        {
+            _uri = normalizeURI(_file, _file.toURI());
+        }
+        catch (final URISyntaxException e)
+        {
+            throw new InvalidPathException(_file.toString(), e.getMessage())
+            {
+                {
+                    initCause(e);
+                }
+            };
+        }
+        _alias=checkFileAlias(_uri,_file);
     }
 
     /* -------------------------------------------------------- */
-    private static String normalizeURI(File file, URI uri)
+    public FileResource(File base, String childPath)
     {
+        String encoded = URIUtil.encodePath(childPath);
+
+        _file = new File(base, childPath);
+
+        // The encoded path should be a suffix of the resource (give or take a directory / )
+        String uriStr;
+        try
+        {
+            if (base.isDirectory())
+            {
+                // treat all paths being added as relative
+                uriStr = URIUtil.addPaths(base.toURI().toASCIIString(),encoded);
+            }
+            else
+            {
+                uriStr=base.toURI().toASCIIString()+encoded;
+            }
+
+            if(_file.isDirectory() && !uriStr.endsWith("/"))
+                uriStr += '/';
+
+            _uri = new URI(uriStr);
+        }
+        catch (final URISyntaxException e)
+        {
+            throw new InvalidPathException(base.toString() + childPath, e.getMessage())
+            {
+                {
+                    initCause(e);
+                }
+            };
+        }
+
+        _alias=checkFileAlias(_uri,_file);
+    }
+
+    /* -------------------------------------------------------- */
+    private static URI normalizeURI(File file, URI uri) throws URISyntaxException {
         String u =uri.toASCIIString();
         if (file.isDirectory())
         {
             if(!u.endsWith("/"))
                 u+="/";
-        } 
+        }
         else if (file.exists() && u.endsWith("/"))
             u=u.substring(0,u.length()-1);
-        return u;
+        return new URI(u);
     }
 
     /* -------------------------------------------------------- */
-    private static URI checkFileAlias(File file)
+    private static URI checkFileAlias(final URI uri, final File file)
     {
         try
         {
+            if (!URIUtil.equalsIgnoreEncodings(uri,file.toURI()))
+            {
+                // Return alias pointing to Java File normalized URI
+                return new File(uri).getAbsoluteFile().toURI();
+            }
+
             String abs=file.getAbsolutePath();
             String can=file.getCanonicalPath();
 
@@ -158,7 +225,7 @@ public class FileResource extends Resource
 
                 URI alias=new File(can).toURI();
                 // Have to encode the path as File.toURI does not!
-                return new URI("file://"+URIUtil.encodePath(alias.getPath()));  
+                return new URI("file://"+URIUtil.encodePath(alias.getPath()));
             }
         }
         catch(Exception e)
@@ -178,42 +245,22 @@ public class FileResource extends Resource
 
         return null;
     }
-    
+
     /* -------------------------------------------------------- */
     @Override
     public Resource addPath(String path)
-        throws IOException,MalformedURLException
+            throws IOException, MalformedURLException
     {
         assertValidPath(path);
         path = org.eclipse.jetty.util.URIUtil.canonicalPath(path);
 
         if (path==null)
-            throw new MalformedURLException();   
-        
+            throw new MalformedURLException();
+
         if ("/".equals(path))
             return this;
-        
-        path=URIUtil.encodePath(path);
-        // The encoded path should be a suffix of the resource (give or take a directory / )
-        URI uri;
-        try
-        {
-            if (_file.isDirectory())
-            {
-                // treat all paths being added as relative
-                uri=new URI(URIUtil.addPaths(_uri,path));
-            }
-            else
-            {
-                uri=new URI(_uri+path);
-            }
-        }
-        catch(final URISyntaxException e)
-        {
-            throw new InvalidPathException(path, e.getMessage());
-        }
 
-        return new FileResource(uri);
+        return new FileResource(_file, path);
     }
 
     private void assertValidPath(String path)
@@ -231,7 +278,7 @@ public class FileResource extends Resource
     {
         return _alias;
     }
-    
+
     /* -------------------------------------------------------- */
     /**
      * Returns true if the resource exists.
@@ -241,7 +288,7 @@ public class FileResource extends Resource
     {
         return _file.exists();
     }
-        
+
     /* -------------------------------------------------------- */
     /**
      * Returns the last modified time
@@ -259,7 +306,7 @@ public class FileResource extends Resource
     @Override
     public boolean isDirectory()
     {
-        return _file.exists() && _file.isDirectory() || _uri.endsWith("/");
+        return _file.exists() && _file.isDirectory() || _uri.toASCIIString().endsWith("/");
     }
 
     /* --------------------------------------------------------- */
@@ -271,7 +318,7 @@ public class FileResource extends Resource
     {
         return _file.length();
     }
-        
+
 
     /* --------------------------------------------------------- */
     /**
@@ -282,7 +329,7 @@ public class FileResource extends Resource
     {
         return _file.getAbsolutePath();
     }
-        
+
     /* ------------------------------------------------------------ */
     /**
      * Returns an File representing the given resource or NULL if this
@@ -293,7 +340,7 @@ public class FileResource extends Resource
     {
         return _file;
     }
-        
+
     /* --------------------------------------------------------- */
     /**
      * Returns an input stream to the resource
@@ -310,14 +357,14 @@ public class FileResource extends Resource
     {
         return FileChannel.open(_file.toPath(),StandardOpenOption.READ);
     }
-        
+
     /* --------------------------------------------------------- */
     /**
      * Deletes the given resource
      */
     @Override
     public boolean delete()
-        throws SecurityException
+            throws SecurityException
     {
         return _file.delete();
     }
@@ -328,7 +375,7 @@ public class FileResource extends Resource
      */
     @Override
     public boolean renameTo( Resource dest)
-        throws SecurityException
+            throws SecurityException
     {
         if( dest instanceof FileResource)
             return _file.renameTo( ((FileResource)dest)._file);
@@ -349,16 +396,16 @@ public class FileResource extends Resource
         for (int i=list.length;i-->0;)
         {
             if (new File(_file,list[i]).isDirectory() &&
-                !list[i].endsWith("/"))
+                    !list[i].endsWith("/"))
                 list[i]+="/";
         }
         return list;
     }
-    
+
     /* ------------------------------------------------------------ */
-    /** 
-     * @param o
-     * @return <code>true</code> of the object <code>o</code> is a {@link FileResource} pointing to the same file as this resource. 
+    /**
+     * @param o the object to compare against this instance
+     * @return <code>true</code> of the object <code>o</code> is a {@link FileResource} pointing to the same file as this resource.
      */
     @Override
     public boolean equals( Object o)
@@ -380,13 +427,13 @@ public class FileResource extends Resource
     @Override
     public int hashCode()
     {
-       return null == _file ? super.hashCode() : _file.hashCode();
+        return null == _file ? super.hashCode() : _file.hashCode();
     }
-    
+
     /* ------------------------------------------------------------ */
     @Override
     public void copyTo(File destination)
-        throws IOException
+            throws IOException
     {
         if (isDirectory())
         {
@@ -416,24 +463,23 @@ public class FileResource extends Resource
     {
         try
         {
-            return new URL(_uri);
+            return _uri.toURL();
         }
         catch (MalformedURLException e)
         {
             throw new IllegalStateException(e);
         }
     }
-    
+
     @Override
     public URI getURI()
     {
-        return _file.toURI();
+        return _uri;
     }
 
     @Override
     public String toString()
     {
-        return _uri;
+        return _uri.toString();
     }
-
 }
